--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,34 @@
 
+ body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
 body{
     background-color: rgb(255, 255, 255);
     padding: 0;
     margin:0;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
 }
 /*header */
+a{
+    text-decoration: none;
+}
+
 header{
-    display: flex;
-    background-image: url("../imagini/sedinta_foto.png");
-    background-size: 120%;
-    background-position:center;
-    background-position: -40px;
-    color: white;
-    padding: 20px;
-    height: 500px;
-    text-transform: uppercase;
-    justify-content: center;
-    align-items: center;
     
-    
-    
+    width: 100%;
+    height: 600px;
+    margin: 0;
+    padding: 0;
+    display:  block;
+    background-image: url("../imagini/sedinta_foto_edited1.png");
+    background-repeat: no-repeat;
+    background-size:100%;
+    background-position-y: center;
+
+
+     
 }
 
 header .logo a {
@@ -35,49 +43,69 @@ header .logo a {
     position: relative;
     
 }
-header ul {
-    display:flex;
-    flex-direction: row;
+
+header ul{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    display:inline-flex;
     list-style-type: none; 
-    background-color: hsla(4, 31%, 67%, 0.507);
-    height: 50px;
+    background-color: rgba(0, 0, 0, 0.3);
+    opacity: 100%;
+    width: 100%;
     align-items: center;
-    
+    justify-content: center;
+
 }
 
 header li{
-    display: flex;
+    font-size:180%;
+    display: inline-flex;
     flex-direction: row;
-    margin-right: 30px;
-    align-items: center;
-    
+    margin-right: 100px;
+    color:white;    
+}
 
-}
-header nav ul{
-    margin:0;
-    list-style-type: none;
-    position:relative;
-    top: -150px;
-}
-header nav li{
-    display: inline block;
+
+/*cuprins*/
+#cuprins{
+    display:flex;
+    flex-wrap: wrap;
+    background-color: white;
+    justify-content: center;
+    padding: 50px;
     
 }
+#cuprin .imagini img:last-child{
+    flex-wrap: wrap;
+}
+    
+#cuprins .imagini img{
+    display: flex;
+    padding: 0;
+    margin:0;
+    width: 400px;
+    height: 300px;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
 
 /* text */
 a:hover{
-    background-color: rgb(34, 34, 34);
     text-decoration: solid;
-
 }
 a:visited{
     text-decoration:none;
-    color:rgb(99, 19, 92);
-
 }
 
 
-/*features */
+
+features 
 .features ul {
     display: flex;
     flex-direction: row; 
@@ -116,6 +144,7 @@ a:visited{
     box-shadow: rgb(184, 184, 184) 0 0 10px ;
     border: 1px solid white;
 }
+
 /*responsive rules*/
 
 /*chenare*/
@@ -139,6 +168,7 @@ flex-direction: row;
     justify-content: center;
     
 }
+    
 /*footer */
 footer{
     background-color: rgb(0, 0, 0);
