--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,12 @@
 
+@font-face {
+    font-family: "font_titlu";
+    src: url("/fonts/Silent_Woods.ttf");
+}
+@font-face{
+    font-family:"classy";
+    src: urc("/fonts/Classy_Font.otf");
+}
  body {
     margin: 0;
     padding: 0;
@@ -16,52 +24,84 @@ a{
 }
 
 header{
-    
     width: 100%;
-    height: 600px;
+    height: 650px;
     margin: 0;
     padding: 0;
-    display:  block;
-    background-image: url("../imagini/sedinta_foto_edited1.png");
+    position: relative;
+    display:inline-block;
+    background-color: black;
+    background-image: url("../imagini/lemn_background.jpg");
     background-repeat: no-repeat;
-    background-size:100%;
-    background-position-y: center;
+    background-size: 100%;
 
-
+    
+    
+    /*background-image: linear-gradient(#442517,#180700);
+*/
+    
      
 }
 
+
 header .logo a {
-    background-image: url("../imagini/logo1.png");
-    background-size: 80px; 
+    background-image: url("../imagini/ArS.png");
+    background-size: 100px; 
     background-repeat: no-repeat;
     border-radius: 10px;
-    display: inline-block;
-    height : 80px;
+    display: inline-flex;
+    height :100px;
     text-indent: -999999px;
-    width: 80px;
+    width: 110px;
     position: relative;
-    
+    size:relative;
 }
 
-header ul{
+header ul {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     display:inline-flex;
     list-style-type: none; 
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgb(250, 229, 198);
     opacity: 100%;
     width: 100%;
+    
     align-items: center;
     justify-content: center;
+
 
 }
 
 header li{
+    font-family:"classy";
     font-size:180%;
     display: inline-flex;
     flex-direction: row;
     margin-right: 100px;
-    color:white;    
+    
+}
+header a:visited{
+    color: black;
+    text-decoration-color: hotpink;
+}
+
+section#titluS #titlu{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-style: normal;
+    color: linear
+    
+}
+#titlu{
+    position: relative;
+    text-shadow: 5px 5px;
+    bottom: 220px;
+    font-size:250px;
+    font-family:"font_titlu" ;
+    background: linear-gradient(#ffffff,#ee6103);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 
@@ -80,20 +120,12 @@ header li{
     
 #cuprins .imagini img{
     display: flex;
-    padding: 0;
+    padding:0;
     margin:0;
     width: 400px;
     height: 300px;
     align-items: center;
 }
-
-
-
-
-
-
-
-
 
 /* text */
 a:hover{
@@ -105,7 +137,7 @@ a:visited{
 
 
 
-features 
+ 
 .features ul {
     display: flex;
     flex-direction: row; 
