--- a/styles/style.css
+++ b/styles/style.css
@@ -24,50 +24,48 @@ a{
 }
 
 header{
+    color:white;
     width: 100%;
-    height: 650px;
-    margin: 0;
+    height: 80px;
     padding: 0;
-    position: relative;
-    display:inline-block;
-    background-color: black;
-    background-image: url("../imagini/lemn_background.jpg");
-    background-repeat: no-repeat;
+    margin: 0;
+    display:block;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
     background-size: 100%;
-
-    
-    
     /*background-image: linear-gradient(#442517,#180700);
 */
-    
-     
+   
 }
 
-
 header .logo a {
-    background-image: url("../imagini/ArS.png");
-    background-size: 100px; 
+    background-image: url("../imagini/LOGO2.PNG");
+    background-size: 100px;
     background-repeat: no-repeat;
-    border-radius: 10px;
+    border-radius: 20px;
     display: inline-flex;
     height :100px;
     text-indent: -999999px;
-    width: 110px;
+    width: 80px;
     position: relative;
-    size:relative;
+    bottom: -10px;
 }
-
 header ul {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-    display:inline-flex;
+    display:flex;
     list-style-type: none; 
-    background-color: rgb(250, 229, 198);
-    opacity: 100%;
-    width: 100%;
+    background-color: rgb(0, 0, 0);
     
+    background-repeat: no-repeat;
+    background-size: 100%;
+    opacity: 100%;
     align-items: center;
     justify-content: center;
-
+    padding: 0;
+    margin-top: 0;
+    margin-right: auto;
+    margin-left: auto;
 
 }
 
@@ -79,8 +77,11 @@ header li{
     margin-right: 100px;
     
 }
+header li:last-child{
+    margin-right: 0;
+}
 header a:visited{
-    color: black;
+    color:white;
     text-decoration-color: hotpink;
 }
 
@@ -93,18 +94,23 @@ section#titluS #titlu{
     color: linear
     
 }
+
 #titlu{
     position: relative;
     text-shadow: 5px 5px;
-    bottom: 220px;
-    font-size:250px;
+    left:-150px;
+    font-size:200px;
     font-family:"font_titlu" ;
-    background: linear-gradient(#ffffff,#ee6103);
+    background: linear-gradient(#000000,#f78012);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-
+.separator{
+            width:100%;
+            height:30px;
+            background-color: black;
+        }
 /*cuprins*/
 #cuprins{
     display:flex;
